# amplifier-lib

./: README.md  pyproject.toml
src/amplifier_lib/: __init__.py  _utils.py  bundle.py  exceptions.py  io.py  paths.py  registry.py  serialization.py  spawn_utils.py  tracing.py  updates.py
src/amplifier_lib/mentions/: __init__.py  loader.py  parser.py  protocol.py
src/amplifier_lib/modules/: __init__.py  activator.py  install_state.py
src/amplifier_lib/session/: __init__.py  capabilities.py  fork.py  slice.py
src/amplifier_lib/sources/: __init__.py  file.py  git.py  http.py  protocol.py  resolver.py  uri.py  zip.py
tests/: test_activator.py  test_bundle.py  test_exceptions.py  test_install_state.py  test_io.py  test_mentions_deduplicator.py  test_mentions_loader.py  test_mentions_models.py  test_mentions_parser.py  test_mentions_resolver.py  test_mentions_utils.py  test_paths.py  test_registry.py  test_serialization.py  test_session_capabilities.py  test_session_fork.py  test_session_fork_fs.py  test_session_slice.py  test_sources_handlers.py  test_sources_resolver.py  test_sources_uri.py  test_spawn_utils.py  test_tracing.py  test_updates.py  test_utils.py
